fixed overflow issues and padding

--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: borderbox;
+}
 body{
   margin: 0 auto;
   font-family: Raleway, sans-serif;
@@ -60,8 +63,10 @@ section{
   margin: 50px auto;
 }
 article{
-  padding: 5%;
   box-sizing: border-box;
+}
+p{
+  padding: 5%;
 }
 .col-1-3, .col-2-3, .col-3-3{
   width: 100%;
@@ -172,7 +177,7 @@ input, textarea, button{
 @media screen and (max-width: 760px) {
   #hamburger-icon{
     display: inline;
-    margin: 2%;
+    margin: 10px 10px;
   }
   #hamburger-icon i{
     margin: 10px auto;
@@ -180,7 +185,7 @@ input, textarea, button{
   section{
     flex-direction: column;
   }
-  article, header{
+  article{
     padding: 5%;
     box-sizing: border-box;
   }
